header main and button tools

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     </header>
     <!-- /#header -->
 
+    <main>
+
+        <header id="header-menu">
+            <button id="ntask" class="button">Add Task</button>
+            <button id="nsection" class="button">Add Section</button>
+        </header>
+
+    </main>
+
 </body>
 
 </html>
