structure Main Macro list

--- a/index.html
+++ b/index.html
@@ -22,9 +22,46 @@
     <main>
 
         <header id="header-menu">
-            <button id="ntask" class="button">Add Task</button>
-            <button id="nsection" class="button">Add Section</button>
+            <button id="ntask-button" class="button">Add Task</button>
+            <button id="nsection-button" class="button">Add Section</button>
         </header>
+        <!--/header main-->
+
+        <div id="main-container">
+
+            <ul>
+                <li id="ntask" class="macrolist">
+                    New Task
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+
+                <li id="today" class="macrolist">
+                    Today
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+
+                <li id="upcoming" class="macrolist">
+                    Upcoming
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+            </ul>
+
+
+        </div>
+        <!-- /#main-container -->
+
 
     </main>
 
