structure html/css marcolist and child list... to continue

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-toboolist</title>
@@ -29,31 +30,49 @@
 
         <div id="main-container">
 
-            <ul>
-                <li id="ntask" class="macrolist">
-                    New Task
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+            <ul class="macrolist">
+                <li id="ntask">
+                    &#x25BE;New Task
+                    <ul class="childlist">
+                        <li class="positive">
+                            Quarterly Newsletter
+                        </li>
                     </ul>
                 </li>
 
-                <li id="today" class="macrolist">
-                    Today
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                <li id="today">
+                    &#x25BE;Today
+                    <ul class="macrolist">
+                        <li>
+                            Recruiting blog post
+                        </li>
+                        <li>
+                            Mobile app launch
+                        </li>
+                        <li>
+                            Interview John H.
+                        </li>
+                        <li>
+                            Summit update tomobile storefonts
+                        </li>
                     </ul>
                 </li>
 
-                <li id="upcoming" class="macrolist">
-                    Upcoming
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                <li id="upcoming">
+                    &#x25BE;Upcoming
+                    <ul class="macrolist">
+                        <li>
+                            Schedule meeting with Alex
+                        </li>
+                        <li>
+                            Homepage refresh
+                        </li>
+                        <li>
+                            Onboard new Sales team members
+                        </li>
+                        <li>
+                            Reviw wditorial calendar
+                        </li>
                     </ul>
                 </li>
             </ul>
