--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <li id="today">
                     &#x25BE;Today
-                    <ul class="macrolist">
+                    <ul class="childlist">
                         <li>
                             Recruiting blog post
                         </li>
@@ -60,7 +60,7 @@
 
                 <li id="upcoming">
                     &#x25BE;Upcoming
-                    <ul class="macrolist">
+                    <ul class="childlist">
                         <li>
                             Schedule meeting with Alex
                         </li>
