continue check list, add square type task

--- a/index.html
+++ b/index.html
@@ -32,46 +32,56 @@
 
             <ul class="macrolist">
                 <li id="ntask">
-                    &#x25BE;New Task
+                    &#x25BE;<b>New Task</b>
                     <ul class="childlist">
-                        <li class="positive">
+                        <li>
+                            <span class="positive">&check;</span>
                             Quarterly Newsletter
+                            <span class="editorial-typetask">Editorial</span>
                         </li>
                     </ul>
                 </li>
 
                 <li id="today">
-                    &#x25BE;Today
+                    &#x25BE;<b>Today</b>
                     <ul class="childlist">
                         <li>
+                            <span class="positive">&check;</span>
                             Recruiting blog post
+                            <span class="editorial-typetask">Editorial</span>
                         </li>
                         <li>
+                            <span class="positive">&check;</span>
                             Mobile app launch
                         </li>
                         <li>
                             Interview John H.
                         </li>
                         <li>
+                            <span class="positive">&check;</span>
                             Summit update tomobile storefonts
                         </li>
                     </ul>
                 </li>
 
                 <li id="upcoming">
-                    &#x25BE;Upcoming
+                    &#x25BE;<b>Upcoming</b>
                     <ul class="childlist">
                         <li>
                             Schedule meeting with Alex
                         </li>
                         <li>
+                            <span class="positive">&check;</span>
                             Homepage refresh
                         </li>
                         <li>
+                            <span class="positive">&check;</span>
                             Onboard new Sales team members
                         </li>
                         <li>
+                            <span class="positive">&check;</span>
                             Reviw wditorial calendar
+                            <span class="editorial-typetask">Editorial</span>
                         </li>
                     </ul>
                 </li>
