finisch typeTask button

--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
                         <li>
                             <span class="positive">&check;</span>
                             Mobile app launch
+                            <span class="goals-typetask">Q1 Goals</span>
                         </li>
                         <li>
+                            <span class="negative">&#10007;</span>
                             Interview John H.
+                            <span class="recruiting-typetask">Recruiting</span>
                         </li>
                         <li>
                             <span class="positive">&check;</span>
                             Summit update tomobile storefonts
+                            <span class="mobile-typetask">Mobile</span>
                         </li>
                     </ul>
                 </li>
@@ -68,15 +72,18 @@
                     &#x25BE;<b>Upcoming</b>
                     <ul class="childlist">
                         <li>
+                            <span class="negative">&#10007;</span>
                             Schedule meeting with Alex
                         </li>
                         <li>
                             <span class="positive">&check;</span>
                             Homepage refresh
+                            <span class="website-typetask">Web site</span>
                         </li>
                         <li>
                             <span class="positive">&check;</span>
                             Onboard new Sales team members
+                            <span class="sales-typetask">Sales</span>
                         </li>
                         <li>
                             <span class="positive">&check;</span>
