img vertical align

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
 
     <header id="header">
-
-        <img src="./Assets/img/Logo.png" alt="logo boolean" id="logo">
-        <span id="header-title">Toboolist</span>
+        <div id="header-title">
+            <img src="./Assets/img/Logo.png" alt="logo boolean" id="logo">
+            Toboolist
+        </div>
 
     </header>
     <!-- /#header -->
